--- a/src/bgp/SConscript
+++ b/src/bgp/SConscript
@@ -75,6 +75,12 @@ test_suite += env.SConscript('ermvpn/SConscript', exports='BuildEnv',
 test_suite += env.SConscript('evpn/SConscript', exports='BuildEnv',
                              duplicate = 0)
 env.SConscript('inet/SConscript', exports='BuildEnv', duplicate = 0)
+test_suite += env.SConscript('inet6/SConscript', exports='BuildEnv',
+                             duplicate = 0)
+test_suite += env.SConscript('inet6vpn/SConscript', exports='BuildEnv',
+                             duplicate = 0)
+test_suite += env.SConscript('inetmcast/SConscript', exports='BuildEnv',
+                             duplicate = 0)
 test_suite += env.SConscript('l3vpn/SConscript', exports='BuildEnv',
                              duplicate = 0)
 test_suite += env.SConscript('origin-vn/SConscript', exports='BuildEnv',
