--- a/src/bgp/ermvpn/test/SConscript
+++ b/src/bgp/ermvpn/test/SConscript
@@ -22,6 +22,8 @@ env.Append(LIBPATH = env['TOP'] + '/bgp/ermvpn')
 env.Append(LIBPATH = env['TOP'] + '/bgp/evpn')
 env.Append(LIBPATH = env['TOP'] + '/bgp/l3vpn')
 env.Append(LIBPATH = env['TOP'] + '/bgp/test')
+env.Append(LIBPATH = env['TOP'] + '/bgp/inet6')
+env.Append(LIBPATH = env['TOP'] + '/bgp/inet6vpn')
 env.Append(LIBPATH = env['TOP'] + '/bgp/origin-vn')
 env.Append(LIBPATH = env['TOP'] + '/bgp/routing-instance')
 env.Append(LIBPATH = env['TOP'] + '/bgp/rtarget')
@@ -85,6 +87,8 @@ if sys.platform != 'darwin':
                              '-lbgp_inet',
                              '-lbgp_l3vpn',
                              '-lrtarget',
+                             '-lbgp_inet6',
+                             '-lbgp_inet6vpn',
                              '-ltask_test',
                              '-Wl,--no-whole-archive'])
 else:
@@ -100,6 +104,10 @@ else:
     env.Prepend(LINKFLAGS = ['-Wl,-force_load,' + lib_l3vpn])
     lib_rtarget = Dir('..').path + '/librtarget.a'
     env.Prepend(LINKFLAGS = ['-Wl,-force_load,' + lib_rtarget])
+    lib_inet6 = Dir('../../inet6').path + '/libbgp_inet6.a'
+    env.Prepend(LINKFLAGS = ['-Wl,-force_load,' + lib_inet6])
+    lib_inet6vpn = Dir('../../inet6vpn').path + '/libbgp_inet6vpn.a'
+    env.Prepend(LINKFLAGS = ['-Wl,-force_load,' + lib_inet6vpn])
 
 ermvpn_prefix_test = env.UnitTest('ermvpn_prefix_test',
                                   ['ermvpn_prefix_test.cc'])
