--- a/src/bgp/inet6vpn/test/SConscript
+++ b/src/bgp/inet6vpn/test/SConscript
@@ -1,5 +1,5 @@
 #
-# Copyright (c) 2013 Juniper Networks, Inc. All rights reserved.
+# Copyright (c) 2014 Juniper Networks, Inc. All rights reserved.
 #
 
 # -*- mode: python; -*-
@@ -17,8 +17,9 @@ env.Append(LIBPATH = env['TOP'] + '/base')
 env.Append(LIBPATH = env['TOP'] + '/base/test')
 env.Append(LIBPATH = env['TOP'] + '/bgp')
 env.Append(LIBPATH = env['TOP'] + '/bgp/inet')
+env.Append(LIBPATH = env['TOP'] + '/bgp/inet6')
+env.Append(LIBPATH = env['TOP'] + '/bgp/inetmcast')
 env.Append(LIBPATH = env['TOP'] + '/bgp/enet')
-env.Append(LIBPATH = env['TOP'] + '/bgp/ermvpn')
 env.Append(LIBPATH = env['TOP'] + '/bgp/evpn')
 env.Append(LIBPATH = env['TOP'] + '/bgp/test')
 env.Append(LIBPATH = env['TOP'] + '/bgp/inet6')
@@ -43,13 +44,13 @@ env.Prepend(LIBS = [
                     'task_test',
                     'bgptest',
                     'bgp',
-                    'control_node',
                     'peer_sandesh',
+                    'control_node',
                     'origin_vn',
                     'routing_instance',
-                    'rtarget',
-                    'security_group',
-                    'tunnel_encap',
+                    'rtarget',                    
+                    'security_group',                    
+                    'tunnel_encap',                    
                     'ifmap_vnc',
                     'bgp_schema',
                     'sandesh',
@@ -67,8 +68,9 @@ env.Prepend(LIBS = [
                     'route',
                     'xmpp',
                     'bgp_inet',
+                    'bgp_inet6',
+                    'bgp_inetmcast',
                     'bgp_enet',
-                    'bgp_ermvpn',
                     'bgp_evpn',
                     'bgp_inet6',
                     'bgp_l3vpn',
@@ -85,45 +87,34 @@ if sys.platform != 'darwin':
     env.Append(LIBS=['rt'])
     env.Prepend(LINKFLAGS = ['-Wl,--whole-archive',
                              '-lbgp_inet',
+                             '-lbgp_inetmcast',
                              '-lbgp_enet',
-                             '-lbgp_ermvpn',
                              '-lbgp_evpn',
                              '-lbgp_l3vpn',
-                             '-lrtarget',
                              '-lbgp_inet6',
                              '-lbgp_inet6vpn',
+                             '-lrtarget',
                              '-ltask_test',
                              '-Wl,--no-whole-archive'])
-else:
-    lib_inet = Dir('../../inet').path + '/libbgp_inet.a'
-    env.Prepend(LINKFLAGS = ['-Wl,-force_load,' + lib_inet])
-    lib_enet = Dir('../../enet').path + '/libbgp_enet.a'
-    env.Prepend(LINKFLAGS = ['-Wl,-force_load,' + lib_enet])
-    lib_ermvpn = Dir('../../ermvpn').path + '/libbgp_ermvpn.a'
-    env.Prepend(LINKFLAGS = ['-Wl,-force_load,' + lib_ermvpn])
-    lib_evpn = Dir('../../evpn').path + '/libbgp_evpn.a'
-    env.Prepend(LINKFLAGS = ['-Wl,-force_load,' + lib_evpn])
-    lib_l3vpn = Dir('../../l3vpn').path + '/libbgp_l3vpn.a'
-    env.Prepend(LINKFLAGS = ['-Wl,-force_load,' + lib_l3vpn])
-    lib_rtarget = Dir('../../rtarget').path + '/librtarget.a'
-    env.Prepend(LINKFLAGS = ['-Wl,-force_load,' + lib_rtarget])
-    lib_inet6 = Dir('../../inet6').path + '/libbgp_inet6.a'
-    env.Prepend(LINKFLAGS = ['-Wl,-force_load,' + lib_inet6])
-    lib_inet6vpn = Dir('../../inet6vpn').path + '/libbgp_inet6vpn.a'
-    env.Prepend(LINKFLAGS = ['-Wl,-force_load,' + lib_inet6vpn])
 
-evpn_table_test = env.UnitTest('evpn_table_test', ['evpn_table_test.cc'])
-env.Alias('src/bgp/evpn:evpn_table_test', evpn_table_test)
+inet6vpn_table_test = env.UnitTest('inet6vpn_table_test',
+                                   ['inet6vpn_table_test.cc'])
+env.Alias('src/bgp/inet6vpn:inet6vpn_table_test', inet6vpn_table_test)
+env.Alias('controller/src/bgp/inet6vpn:inet6vpn_table_test',
+          inet6vpn_table_test)
 
-evpn_prefix_test = env.UnitTest('evpn_prefix_test', ['evpn_prefix_test.cc'])
-env.Alias('src/bgp/evpn:evpn_prefix_test', evpn_prefix_test)
+inet6vpn_prefix_test = env.UnitTest('inet6vpn_prefix_test',
+                                    ['inet6vpn_prefix_test.cc'])
+env.Alias('src/bgp/inet6vpn:inet6vpn_prefix_test', inet6vpn_prefix_test)
+env.Alias('controller/src/bgp/inet6vpn:inet6vpn_prefix_test',
+          inet6vpn_prefix_test)
 
 test_suite = [
-    evpn_prefix_test,
-    evpn_table_test,
+    inet6vpn_prefix_test,
+    inet6vpn_table_test,
 ]
 
 test = env.TestSuite('bgp-test', test_suite)
-env.Alias('controller/src/bgp/evpn:test', test)
+env.Alias('src/bgp:test', test)
 
 Return('test_suite')
