--- a/src/bgp/rtarget/test/SConscript
+++ b/src/bgp/rtarget/test/SConscript
@@ -16,8 +16,9 @@ env.Append(CPPPATH = [env['TOP'],
 
 env.Append(LIBPATH = [env['TOP'] + '/base', env['TOP'] + '/base/test',
            env['TOP'] + '/bgp', env['TOP'] + '/bgp/enet',
-           env['TOP'] + '/bgp/ermvpn', env['TOP'] + '/bgp/evpn',
-           env['TOP'] + '/bgp/inet', env['TOP'] + '/bgp/l3vpn',
+           env['TOP'] + '/bgp/ermvpn', env['TOP'] + '/bgp/evpn', 
+           env['TOP'] + '/bgp/inet', env['TOP'] + '/bgp/inet6', 
+           env['TOP'] + '/bgp/inet6vpn', env['TOP'] + '/bgp/l3vpn',
            env['TOP'] + '/bgp/origin-vn', env['TOP'] + '/bgp/routing-instance',
            env['TOP'] + '/bgp/rtarget', env['TOP'] + '/bgp/security_group',
            env['TOP'] + '/bgp/test', env['TOP'] + '/bgp/tunnel_encap',
@@ -38,6 +39,7 @@ env.Prepend(LIBS = ['control_test', 'bgptest', 'bgp', 'peer_sandesh',
 
 env.Append(LIBS = ['bgp_enet', 'bgp_ermvpn', 'bgp_evpn'])
 env.Append(LIBS = ['bgp_inet', 'bgp_l3vpn'])
+env.Append(LIBS = ['bgp_inet6', 'bgp_inet6vpn'])
 env.Append(LIBS = ['route', 'net', 'routing_instance', 'rtarget'])
 env.Append(LIBS = ['origin_vn', 'security_group', 'tunnel_encap'])
 env.Append(LIBS = ['xmpp', 'xmpp_unicast', 
@@ -66,6 +68,8 @@ else:
                  '-lbgp_enet',
                  '-lbgp_ermvpn',
                  '-lbgp_evpn',
+                 '-lbgp_inet6',
+                 '-lbgp_inet6vpn',
                  '-lbgp_l3vpn',
                  '-lrtarget',
                  '-Wl,--no-whole-archive'])
