--- a/src/bgp/inet6/test/SConscript
+++ b/src/bgp/inet6/test/SConscript
@@ -19,9 +19,9 @@ env.Append(LIBPATH = env['TOP'] + '/bgp')
 env.Append(LIBPATH = env['TOP'] + '/bgp/inet')
 env.Append(LIBPATH = env['TOP'] + '/bgp/inet6')
 env.Append(LIBPATH = env['TOP'] + '/bgp/inet6vpn')
-env.Append(LIBPATH = env['TOP'] + '/bgp/inetmcast')
 env.Append(LIBPATH = env['TOP'] + '/bgp/enet')
 env.Append(LIBPATH = env['TOP'] + '/bgp/evpn')
+env.Append(LIBPATH = env['TOP'] + '/bgp/ermvpn')
 env.Append(LIBPATH = env['TOP'] + '/bgp/test')
 env.Append(LIBPATH = env['TOP'] + '/bgp/l3vpn')
 env.Append(LIBPATH = env['TOP'] + '/bgp/origin-vn')
@@ -69,7 +69,7 @@ env.Prepend(LIBS = [
                     'bgp_inet',
                     'bgp_inet6',
                     'bgp_inet6vpn',
-                    'bgp_inetmcast',
+                    'bgp_ermvpn',
                     'bgp_enet',
                     'bgp_evpn',
                     'bgp_l3vpn',
@@ -87,11 +87,11 @@ if sys.platform != 'darwin':
                              '-lbgp_enet',
                              '-lbgp_evpn',
                              '-lbgp_inet',
-                             '-lbgp_inetmcast',
                              '-lbgp_l3vpn',
                              '-lbgp_inet6',
                              '-lbgp_inet6vpn',
                              '-lrtarget',
+                             '-lbgp_ermvpn',
                              '-ltask_test',
                              '-Wl,--no-whole-archive'])
 
