--- a/src/bgp/inet6/test/SConscript
+++ b/src/bgp/inet6/test/SConscript
@@ -107,6 +107,6 @@ test_suite = [
 ]
 
 test = env.TestSuite('bgp-test', test_suite)
-env.Alias('src/bgp:test', test)
+env.Alias('controller/src/bgp/inet6:test', test)
 
 Return('test_suite')
