--- a/src/bgp/inet6vpn/test/SConscript
+++ b/src/bgp/inet6vpn/test/SConscript
@@ -115,6 +115,6 @@ test_suite = [
 ]
 
 test = env.TestSuite('bgp-test', test_suite)
-env.Alias('src/bgp:test', test)
+env.Alias('controller/src/bgp/inet6vpn:test', test)
 
 Return('test_suite')
