--- a/src/bgp/test/SConscript
+++ b/src/bgp/test/SConscript
@@ -23,8 +23,8 @@ env.Append(LIBPATH = ['#/' + Dir('..').path,
                       '../../bgp/ermvpn',
                       '../../bgp/evpn',
                       '../../bgp/inet6',
-                      '../../bgp/l3vpn',
                       '../../bgp/inet6vpn',
+                      '../../bgp/l3vpn',
                       '../../control-node',
                       '../../db',
                       '../../io',
@@ -365,6 +365,8 @@ env.Alias('controller/src/bgp:test', [
     'controller/src/bgp/enet:test',
     'controller/src/bgp/ermvpn:test',
     'controller/src/bgp/evpn:test',
+    'controller/src/bgp/inet6:test',
+    'controller/src/bgp/inet6vpn:test',
     'controller/src/bgp/l3vpn:test',
     'controller/src/bgp/origin-vn:test',
     'controller/src/bgp/rtarget:test',
