--- a/src/bgp/inet6/test/SConscript
+++ b/src/bgp/inet6/test/SConscript
@@ -98,11 +98,16 @@ if sys.platform != 'darwin':
 inet6_prefix_test = env.UnitTest('inet6_prefix_test', ['inet6_prefix_test.cc'])
 env.Alias('src/bgp/inet6:inet6_prefix_test', inet6_prefix_test)
 
+inet6_route_test = env.UnitTest('inet6_route_test', ['inet6_route_test.cc'])
+env.Alias('src/bgp/inet6:inet6_route_test', inet6_route_test)
+env.Alias('controller/src/bgp/inet6:inet6_route_test', inet6_route_test)
+
 inet6_table_test = env.UnitTest('inet6_table_test', ['inet6_table_test.cc'])
 env.Alias('src/bgp/inet6:inet6_table_test', inet6_table_test)
 
 test_suite = [
     inet6_prefix_test,
+    inet6_route_test,
     inet6_table_test,
 ]
 
